--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -24,9 +24,14 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install pytest pytest-cov codecov
-    - name: Test with pytest
+    - name: Test with pytest and then generate a coverage report
       run: |
-        pytest --cov=./
-    - name: Upload coverage report
-      run: |
-        codecov
+        pytest --cov --cov-branch --cov-report=xml
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v3
+      with:
+        files: coverage.xml
+        flags: unittests
+        name: python-${{ matrix.python-version }}
+        fail_ci_if_error: true
+
